src/landing/Landing.css
.landing {
    background-image: url("/public/landing/background.png");
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    overflow: hidden auto;
    background-position: center !important;
    background-size: cover !important;
}

.load-bar {
    position: absolute;
    top: 0;
    left: 0;
    height: 4px;
    width: 0px;
    border-radius: 0 2px 2px 0;
    background-image:
        linear-gradient(90deg, #00B08A, #004BAD);
    transition: .2s;
}

.load-bar#load {
    width: 100% !important;
}

.landing header {
    z-index: 2;
    padding: 30px 0 0 0;
    width: 100vw;
    height: min-content;
}

.header-content {
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 4px;
}

.header-content h1 {
    font-size: 40px;
    font-weight: 500;
    text-align: center;
    color: #333;
}

.header-content h1 strong {
    background: linear-gradient(to right, #00B08A, #004BAD);
    background-clip: text;
    text-wrap: nowrap;
    -webkit-text-fill-color: transparent;
    font-weight: 800;
}

.header-content p {
    font-size: 18px;
    font-weight: 600;
    color: #646464;
}

.header-content hr {
    margin: 0px;
    width: 140px;
    opacity: 1;
    border: none;
    height: 4px;
    background: linear-gradient(to right, #00B08A, #004BAD);
    border-radius: 2px;
}

.landing main {
    z-index: 1;
    width: 100vw;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    flex-grow: 1;
}

.landing main section {
    background-color: #FFFFFF00;
}

.landing main .side {
    width: 100%;
    height: auto;
    min-height: 400px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-position: center;
    background-size: 80%;
    background-repeat: no-repeat;
}

.enter-card {
    border-radius: 20px;
    width: 80%;
    height: 90%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-size: cover;
    box-shadow: -5px 5px 10px #0003;
}

main .button-to {
    padding: 0px;
    display: flex;
    width: auto;
    height: auto;
    position: relative;
    bottom: calc(-50% + 80px);
    border-radius: 999px;
    border: none;
    box-shadow: 5px 5px 10px #0003;
    transition: .4s;
}

main .button-to:hover {
    transform: scale(1.02);
}

main .button-to:active {
    transition: .1s;
    transform: scale(1.2);
}

main .button-to a {
    box-sizing: border-box;
    padding: 12px 50px !important;
    color: #fff;
    text-decoration: none !important;
    font-size: 15px;
    font-weight: 600;
}

main .button-to#recicla-btn {
    background-color: #00B08A;
}

main .button-to#tecnologia-btn {
    background-color: #004BAD;
}

#recicla {
    background-image: url("/public/landing/landingrecicla.webp")
}

#tecnologia {
    background-image: url("/public/landing/landingsol.webp")
}

.landing footer {
    backdrop-filter: blur(20px);
    background-color: #0005;
}

.feats {
    padding: 0 50px;
    height: auto;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.feat {
    padding: 20px 0 0 0;
    width: 20%;
}

.feat h5 {
    font-size: 16px;
    font-weight: 800;
    color: #004BAD;
}

.feat:first-child h5 {
    color: #00B08A;
}

.feat p {
    font-size: 14px;
    font-weight: 600;
    color: #fff;
}

.line {
    width: 1px;
    height: 60px;
    background-image: linear-gradient(to bottom, #0000, #0008, #0000);
}

.landing .rights {
    text-align: center;
    padding: 10px 0;
    color: #fff;
    font-size: 14px;
}

@media screen and (max-width: 510px) {
    .landing main {
        padding: 50px 0;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr;
    }

    .landing {
        height: auto;
    }

    .feats {
        flex-direction: column;
        gap: 20px;
        text-align: center;
    }

    .feat {
        width: 100%;
    }

    .line {
        display: none;
    }
}

